force-app/main/default/objects/ucinn_ascendv2__Dedupe_Possible_Duplicate_Found__c/ucinn_ascendv2__Dedupe_Possible_Duplicate_Found__c.object-meta.xml
<CustomObject>
    <description>Store all the possible duplicate found target record ID.</description>
    <label>Dedupe Possible Duplicate Found</label>
    <nameField>
        <label>Target Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dedupe Possible Duplicate Founds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>