force-app/main/default/objects/ucinn_ascendv2__Dedupe_Possible_Duplicate_Found__c/fields/ucinn_ascendv2__Dedupe_Possible_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Dedupe_Possible_Duplicate__c</fullName>
    <description>The possible duplicate this duplicate found belong to.</description>
    <label>Dedupe Possible Duplicate</label>
    <referenceTo>ucinn_ascendv2__Dedupe_Possible_Duplicate__c</referenceTo>
    <relationshipLabel>Dedupe Possible Duplicate Founds</relationshipLabel>
    <relationshipName>Dedupe_Possible_Duplicate_Founds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>