force-app/main/default/objects/ucinn_ascendv2__Dedupe_Possible_Duplicate_Found__c/fields/ucinn_ascendv2__Matching_Score__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Score__c</fullName>
    <description>The matching score for this record.</description>
    <label>Matching Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>