force-app/main/default/objects/ucinn_ascendv2__Dedupe_Possible_Duplicate_Found__c/fields/ucinn_ascendv2__Target_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Target_Object_Name__c</fullName>
    <description>The target object name.</description>
    <label>Target Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>