force-app/main/default/objects/ucinn_ascendv2__Dedupe_Possible_Duplicate_Found__c/fields/ucinn_ascendv2__Target_Record_Link_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Target_Record_Link_Formula__c</fullName>
    <description>Hyper link to the target record.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Name , Name)</formula>
    <label>Target Record Link</label>
    <type>Text</type>
</CustomField>